--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Aquí irá el contenido: header, secciones, etc -->
+  <header>
+    <h1 style="text-align:center; font-family: 'Playfair Display', serif; color:#d63384;">Bienvenida a Belladonna</h1>
+    <p style="text-align:center; font-family: 'Montserrat', sans-serif;">Tu tienda online de productos de belleza</p>
+  </header>
+
+  <script src="script.js"></script>
+</body>
   <script src="script.js"></script>
 </body>
 </html>
