--- a/index.html
+++ b/index.html
@@ -2,19 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Belladonna - Belleza y Estilo</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet">
+  <title>Belladonna</title>
 </head>
 <body>
-  <header>
-    <h1 style="text-align:center; font-family: 'Playfair Display', serif; color:#d63384;">Bienvenida a Belladonna</h1>
-    <p style="text-align:center; font-family: 'Montserrat', sans-serif;">Tu tienda online de productos de belleza</p>
-  </header>
-
-  <script src="script.js"></script>
-</body>
-  <script src="script.js"></script>
+  <h1 style="color: deeppink; text-align: center;">¡Hola Belladonna!</h1>
+  <p style="text-align: center;">Tu tienda de belleza online está funcionando 🎉</p>
 </body>
 </html>
