--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Belladonna</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Belladonna - Belleza y Estilo</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 style="color: deeppink; text-align: center;">¡Hola Belladonna!</h1>
-  <p style="text-align: center;">Tu tienda de belleza online está funcionando 🎉</p>
+
+  <!-- CABECERA CON MENÚ DE NAVEGACIÓN -->
+  <header>
+    <div class="logo">Belladonna</div>
+    <nav>
+      <ul class="nav-menu">
+        <li><a href="#">Marcas</a></li>
+        <li><a href="#">Cuidado de la piel</a></li>
+        <li><a href="#">Cabello</a></li>
+        <li><a href="#">Maquillaje</a></li>
+        <li><a href="#">Cuidado corporal</a></li>
+        <li><a href="#">Accesorios</a></li>
+        <li><a href="#">Fragancias</a></li>
+        <li><a href="#">Descuentos</a></li>
+        <li><a href="#">Sets & Regalos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- SECCIÓN DE BIENVENIDA -->
+  <section style="text-align: center; padding: 40px;">
+    <h1 style="color: #d63384; font-family: 'Playfair Display', serif;">Bienvenida a Belladonna</h1>
+    <p style="font-family: 'Montserrat', sans-serif;">Tu tienda online de productos de belleza, elegancia y estilo</p>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
