--- a/index.html
+++ b/index.html
@@ -36,3 +36,12 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<!-- BANNER PRINCIPAL -->
+<section class="banner">
+  <div class="banner-contenido">
+    <h2>Descubre tu Belleza Natural</h2>
+    <p>Productos exclusivos de las mejores marcas. Estilo, cuidado y elegancia para ti.</p>
+    <a href="#" class="boton-banner">Ver Productos</a>
+  </div>
+</section>
