--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <!-- BANNER PRINCIPAL -->
 <section class="banner">
   <div class="banner-contenido">
-    <h2>Descubre tu Belleza Natural</h2>
-    <p>Productos exclusivos de las mejores marcas. Estilo, cuidado y elegancia para ti.</p>
+    <h2>Explora Tu Estilo con Belladonna</h2>
+    <p>Maquillaje y belleza con el toque perfecto. Elegancia, frescura y tú.</p>
     <a href="#" class="boton-banner">Ver Productos</a>
   </div>
 </section>
