--- a/index.html
+++ b/index.html
@@ -45,3 +45,18 @@
     <a href="#" class="boton-banner">Ver Productos</a>
   </div>
 </section>
+
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- Redes Sociales -->
+<section class="redes-sociales">
+  <h3>Síguenos en nuestras redes sociales</h3>
+  <div class="iconos-redes">
+    <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/BelladonnaPeru" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  </div>
+</section>
+  
+ 
