--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
   <h3>Síguenos en nuestras redes sociales</h3>
   <div class="iconos-redes">
     <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/BelladonnaPeru" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=61557920148020" target="_blank"><i class="fab fa-facebook"></i></a>
     <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
   </div>
