Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Belladonna - Belleza y Estilo</title>
+
+  <!-- CSS y fuentes -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet">
+
+  <!-- Íconos Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -33,27 +38,26 @@
     <p style="font-family: 'Montserrat', sans-serif;">Tu tienda online de productos de belleza, elegancia y estilo</p>
   </section>
 
+  <!-- BANNER PRINCIPAL -->
+  <section class="banner">
+    <div class="banner-contenido">
+      <h2>Descubre tu Belleza Natural</h2>
+      <p>Productos exclusivos de las mejores marcas. Estilo, cuidado y elegancia para ti.</p>
+      <a href="#" class="boton-banner">Ver Productos</a>
+    </div>
+  </section>
+
+  <!-- REDES SOCIALES -->
+  <section class="redes-sociales">
+    <h3>Síguenos en nuestras redes sociales</h3>
+    <div class="iconos-redes">
+      <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/share/1Akv9QbW88/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+  </section>
+
+  <!-- SCRIPT -->
   <script src="script.js"></script>
 </body>
 </html>
-
-<!-- BANNER PRINCIPAL -->
-<section class="banner">
-  <div class="banner-contenido">
-    <h2>Descubre tu Belleza Natural</h2>
-    <p>Productos exclusivos de las mejores marcas. Estilo, cuidado y elegancia para ti.</p>
-    <a href="#" class="boton-banner">Ver Productos</a>
-  </div>
-</section>
-
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-<!-- Redes Sociales -->
-<section class="redes-sociales">
-  <h3>Síguenos en nuestras redes sociales</h3>
-  <div class="iconos-redes">
-    <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/profile.php?id=61557920148020" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
-  </div>
