--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
         <li><a href="#">Sets & Regalos</a></li>
       </ul>
     </nav>
-  </header>
+  <header>
+  <div class="logo">Belladonna</div>
+  <nav>
+    <ul class="nav-menu">
+      <li><a href="#">Marcas</a></li>
+      <li><a href="#">Cuidado de la piel</a></li>
+      <li><a href="#">Cabello</a></li>
+      <li><a href="#">Maquillaje</a></li>
+      <li><a href="#">Cuidado corporal</a></li>
+      <li><a href="#">Accesorios</a></li>
+      <li><a href="#">Fragancias</a></li>
+      <li><a href="#">Descuentos</a></li>
+      <li><a href="#">Sets & Regalos</a></li>
+    </ul>
+  </nav>
+
+  <!-- Icono carrito -->
+  <div class="carrito-icono" onclick="toggleCarrito()">
+    <i class="fas fa-shopping-cart"></i>
+    <span id="contador-carrito">0</span>
+  </div>
+</header>
 
   <!-- SECCIÓN DE BIENVENIDA -->
   <section style="text-align: center; padding: 40px;">
