--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <!-- Íconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+<!-- CARRITO LATERAL -->
+<div id="carrito" class="carrito">
+  <h3>Tu carrito</h3>
+  <ul id="lista-carrito"></ul>
+  <p>Total: <span id="total-carrito">S/ 0.00</span></p>
+  <button onclick="finalizarCompra()">Finalizar compra</button>
+</div>
 <body>
 
   <!-- CABECERA CON MENÚ DE NAVEGACIÓN -->
