Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h3>Tu carrito</h3>
     <ul id="lista-carrito"></ul>
     <p>Total: <span id="total-carrito">S/ 0.00</span></p>
-    <button onclick="finalizarCompra()">Finalizar compra</button>
+    <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
   </div>
 
   <!-- CABECERA CON MENÚ DE NAVEGACIÓN -->
