--- a/index.html
+++ b/index.html
@@ -117,4 +117,14 @@
     <p id="pago-msg"></p>
   </form>
 </section>
+<!-- FORMULARIO DE CONTACTO -->
+<section class="formulario-contacto">
+  <h3>¿Tienes alguna duda?</h3>
+  <form action="https://formsubmit.co/tucorreo@gmail.com" method="POST">
+    <input type="text" name="nombre" placeholder="Tu nombre" required>
+    <input type="email" name="correo" placeholder="Tu correo" required>
+    <textarea name="mensaje" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
+    <button class="cart-btn" type="submit">Enviar</button>
+  </form>
+</section>
 
