Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <!-- FORMULARIO DE CONTACTO -->
 <section class="formulario-contacto">
   <h3>¿Tienes alguna duda?</h3>
-  <form action="https://formsubmit.co/tucorreo@gmail.com" method="POST">
+  <form action="https://formsubmit.co/belladonna_peru@hotmail.com" method="POST">
     <input type="text" name="nombre" placeholder="Tu nombre" required>
     <input type="email" name="correo" placeholder="Tu correo" required>
     <textarea name="mensaje" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
