Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
       <option value="plin">Plin</option>
       <option value="transferencia">Transferencia</option>
     </select>
+    <section class="metodos-pago">
+  <h3>Opciones de pago</h3>
+  <p>Paga con Yape escaneando el código:</p>
+  <img src="img/IMG_2346.jpeg" alt="Yape QR" style="max-width: 250px;">
+</section>
 
     <!-- Imagen dinámica según método de pago -->
     <div id="imagenPago" style="margin-bottom: 15px;"></div>
