--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
   <!-- Íconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+<body>
+
+<!-- HEADER CON BUSCADOR Y MENÚ -->
 <header class="menu-top">
   <div class="contenedor-menu">
     <div class="logo">Belladonna</div>
-
     <div class="buscador">
-      <input type="text" placeholder="Buscar productos..." id="buscarInput" />
-      <button onclick="buscarProducto()"><i class="fas fa-search"></i></button>
+      <input type="text" placeholder="Buscar productos..." id="buscarInput" onkeyup="filtrarProductos()" />
+      <button><i class="fas fa-search"></i></button>
     </div>
-
     <div class="iconos-header">
       <a href="#"><i class="fas fa-user"></i></a>
       <a href="#" onclick="toggleCarrito()"><i class="fas fa-shopping-cart"></i><span id="contador-carrito">0</span></a>
@@ -39,148 +40,110 @@
   </nav>
 </header>
 
-  <!-- CARRITO LATERAL -->
-  <div id="carrito" class="carrito">
-    <h3>Tu carrito</h3>
-    <ul id="lista-carrito"></ul>
-    <p>Total: <span id="total-carrito">S/ 0.00</span></p>
-    <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
-  </div>
+<!-- CARRITO LATERAL -->
+<div id="carrito" class="carrito">
+  <h3>Tu carrito</h3>
+  <ul id="lista-carrito"></ul>
+  <p>Total: <span id="total-carrito">S/ 0.00</span></p>
+  <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
+</div>
 
-  <!-- CABECERA -->
-  <header>
-    <div class="logo">Belladonna</div>
-    <nav>
-      <ul class="nav-menu">
-        <li><a href="#">Marcas</a></li>
-        <li><a href="#">Cuidado de la piel</a></li>
-        <li><a href="#">Cabello</a></li>
-        <li><a href="#">Maquillaje</a></li>
-        <li><a href="#">Cuidado corporal</a></li>
-        <li><a href="#">Accesorios</a></li>
-        <li><a href="#">Fragancias</a></li>
-        <li><a href="#">Descuentos</a></li>
-        <li><a href="#">Sets & Regalos</a></li>
-      </ul>
-    </nav>
-
-    <!-- Icono carrito -->
-    <div class="carrito-icono" onclick="toggleCarrito()">
-      <i class="fas fa-shopping-cart"></i>
-      <span id="contador-carrito">0</span>
-    </div>
-  </header>
-
-  <!-- BIENVENIDA -->
-  <section style="text-align: center; padding: 40px;">
-    <h1 style="color: #d63384; font-family: 'Playfair Display', serif;">Bienvenida a Belladonna</h1>
-    <p style="font-family: 'Montserrat', sans-serif;">Tu tienda online de productos de belleza, elegancia y estilo</p>
-  </section>
-
-  <!-- BANNER -->
-  <section class="banner">
-    <div class="banner-contenido">
-      <h2>Descubre tu Belleza Natural</h2>
-      <p>Productos exclusivos de las mejores marcas. Estilo, cuidado y elegancia para ti.</p>
-      <a href="#" class="boton-banner">Ver Productos</a>
-    </div>
-  </section>
-
-  <!-- PRODUCTOS DESTACADOS -->
-  <section class="productos">
-    <h3 class="titulo-productos">Productos destacados</h3>
-    <div class="producto">
-      <img src="https://via.placeholder.com/200x200.png?text=Labial+Mate" alt="Labial Mate Rosa" />
-      <h4>Labial Mate Rosa</h4>
-      <p>S/ 45.00</p>
-      <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
-    </div>
-    <!-- Puedes duplicar este bloque para más productos -->
-  </section>
-
-  <!-- REDES SOCIALES -->
-  <section class="redes-sociales">
-    <h3>Síguenos en nuestras redes sociales</h3>
-    <div class="iconos-redes">
-      <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/share/1Akv9QbW88/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook"></i></a>
-      <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
-    </div>
-  </section>
-
-  <!-- COTIZADOR DE ENVÍO -->
-  <section class="cotizador-envio">
-    <h3>Calcula tu envío</h3>
-    <p>Selecciona tu ciudad:</p>
-    <select id="ciudad">
-      <option value="">-- Elige una ciudad --</option>
-      <option value="lima">Lima</option>
-      <option value="arequipa">Arequipa</option>
-      <option value="cusco">Cusco</option>
-      <option value="otros">Otros</option>
-    </select>
-    <button onclick="cotizarEnvio()" class="cart-btn" style="margin-top: 10px;">Calcular</button>
-    <p id="resultado-envio" style="margin-top: 10px; color: #d63384;"></p>
-  </section>
-
-  <!-- FORMULARIO DE PAGO -->
-  <section class="formulario-pago">
-    <h3>Finaliza tu Compra</h3>
-    <form id="formPago">
-      <input type="text" id="nombre" placeholder="Nombre completo" required>
-      <input type="email" id="correo" placeholder="Correo electrónico" required>
-      <input type="text" id="direccion" placeholder="Dirección de envío" required>
-
-      <select id="metodoPago" onchange="mostrarImagenPago()" required>
-        <option value="">Método de pago</option>
-        <option value="yape">Yape</option>
-        <option value="plin">Plin</option>
-        <option value="transferencia">Transferencia</option>
-      </select>
-
-      <!-- Imagen del método de pago -->
-      <div id="imagenPago" style="margin: 15px 0;"></div>
-
-      <button class="cart-btn" type="submit">Pagar</button>
-      <p id="pago-msg" style="margin-top: 10px;"></p>
-    </form>
-  </section>
-
-  <!-- FORMULARIO DE CONTACTO -->
-  <section class="formulario-contacto">
-    <h3>¿Tienes alguna duda?</h3>
-    <form action="https://formsubmit.co/belladonna_peru@hotmail.com" method="POST">
-      <input type="text" name="nombre" placeholder="Tu nombre" required>
-      <input type="email" name="correo" placeholder="Tu correo" required>
-      <textarea name="mensaje" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
-      <button class="cart-btn" type="submit">Enviar</button>
-    </form>
-  </section>
-
-  <!-- JS -->
-  <script src="script.js"></script>
-</body>
-</html>
-<!-- Buscador -->
-<section class="busqueda">
-  <input type="text" id="buscarInput" placeholder="Buscar productos..." onkeyup="filtrarProductos()">
+<!-- BIENVENIDA -->
+<section style="text-align: center; padding: 40px;">
+  <h1 style="color: #d63384; font-family: 'Playfair Display', serif;">Bienvenida a Belladonna</h1>
+  <p style="font-family: 'Montserrat', sans-serif;">Tu tienda online de productos de belleza, elegancia y estilo</p>
 </section>
 
-<!-- Productos destacados -->
+<!-- BANNER -->
+<section class="banner">
+  <div class="banner-contenido">
+    <h2>Descubre tu Belleza Natural</h2>
+    <p>Productos exclusivos de las mejores marcas. Estilo, cuidado y elegancia para ti.</p>
+    <a href="#" class="boton-banner">Ver Productos</a>
+  </div>
+</section>
+
+<!-- PRODUCTOS CON FILTRO -->
 <section class="productos" id="productos">
-  <div class="producto">
-    <img src="https://via.placeholder.com/200x200.png?text=Labial+Mate" alt="Labial Mate Rosa">
+  <h3 class="titulo-productos">Productos destacados</h3>
+  <div class="producto" data-nombre="labial mate rosa">
+    <img src="https://via.placeholder.com/200x200.png?text=Labial+Mate" alt="Labial Mate Rosa" />
     <h4>Labial Mate Rosa</h4>
     <p>S/ 45.00</p>
     <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
   </div>
 
-  <div class="producto">
-    <img src="https://via.placeholder.com/200x200.png?text=Base+Líquida" alt="Base Líquida">
+  <div class="producto" data-nombre="base líquida natural">
+    <img src="https://via.placeholder.com/200x200.png?text=Base+Líquida" alt="Base Líquida" />
     <h4>Base Líquida Natural</h4>
     <p>S/ 55.00</p>
     <button class="cart-btn" onclick="agregarAlCarrito('Base Líquida Natural', 55)">Agregar al carrito</button>
   </div>
 
-  <!-- Agrega más productos aquí -->
+  <!-- Agrega más productos aquí con data-nombre -->
 </section>
+
+<!-- REDES SOCIALES -->
+<section class="redes-sociales">
+  <h3>Síguenos en nuestras redes sociales</h3>
+  <div class="iconos-redes">
+    <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/share/1Akv9QbW88/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  </div>
+</section>
+
+<!-- SCRIPT -->
+<script>
+  function toggleCarrito() {
+    document.getElementById("carrito").classList.toggle("abierto");
+  }
+
+  let carrito = [];
+  function agregarAlCarrito(nombre, precio) {
+    carrito.push({ nombre, precio });
+    actualizarCarrito();
+  }
+
+  function actualizarCarrito() {
+    const lista = document.getElementById("lista-carrito");
+    const totalSpan = document.getElementById("total-carrito");
+    const contador = document.getElementById("contador-carrito");
+    lista.innerHTML = "";
+    let total = 0;
+
+    carrito.forEach(item => {
+      const li = document.createElement("li");
+      li.textContent = `${item.nombre} - S/ ${item.precio.toFixed(2)}`;
+      lista.appendChild(li);
+      total += item.precio;
+    });
+
+    totalSpan.textContent = `S/ ${total.toFixed(2)}`;
+    contador.textContent = carrito.length;
+  }
+
+  function finalizarCompra() {
+    alert("Gracias por tu compra 🛍️");
+    carrito = [];
+    actualizarCarrito();
+    toggleCarrito();
+  }
+
+  // Filtro de productos
+  function filtrarProductos() {
+    const input = document.getElementById("buscarInput").value.toLowerCase();
+    const productos = document.querySelectorAll(".producto");
+
+    productos.forEach(producto => {
+      const nombre = producto.dataset.nombre;
+      if (nombre.includes(input)) {
+        producto.style.display = "block";
+      } else {
+        producto.style.display = "none";
+      }
+    });
+  }
+</script>
+</body>
+</html>
