Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
   <p>Total: <span id="total-carrito">S/ 0.00</span></p>
   <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
 </div>
+<!-- CARRITO LATERAL PROFESIONAL -->
+<div id="carrito" class="carrito-lateral">
+  <div class="carrito-header">
+    <h3>Tu carrito</h3>
+    <button class="cerrar-carrito" onclick="toggleCarrito()">✖</button>
+  </div>
+  <ul id="lista-carrito" class="carrito-lista"></ul>
+  <div class="carrito-footer">
+    <p>Total: <span id="total-carrito">S/ 0.00</span></p>
+    <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
+  </div>
+</div>
 
 <!-- BIENVENIDA -->
 <section style="text-align: center; padding: 40px;">
