Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     
     <header class="header-principal">
   <div class="contenedor-header">
+    <!-- LOGO -->
     <div class="logo">
       <a href="#">Belladonna</a>
     </div>
 
+    <!-- MENÚ DE NAVEGACIÓN -->
     <nav class="menu-horizontal">
       <ul class="nav-menu">
         <li><a href="#">Marcas</a></li>
@@ -40,6 +42,7 @@
       </ul>
     </nav>
 
+    <!-- ÍCONOS -->
     <div class="iconos-header">
       <a href="#"><i class="fas fa-user"></i></a>
       <a href="#" onclick="toggleCarrito()">
@@ -47,25 +50,6 @@
       </a>
     </div>
   </div>
-</header>
-
-    <div class="iconos-header">
-      <a href="#"><i class="fas fa-user"></i></a>
-      <a href="#" onclick="toggleCarrito()"><i class="fas fa-shopping-cart"></i><span id="contador-carrito">0</span></a>
-    </div>
-  </div>
-
-  <nav class="menu-navegacion">
-    <ul class="nav-menu">
-      <li><a href="#">Marcas</a></li>
-      <li><a href="#">Cuidado Facial</a></li>
-      <li><a href="#">Cabello</a></li>
-      <li><a href="#">Maquillaje</a></li>
-      <li><a href="#">Fragancias</a></li>
-      <li><a href="#">Ofertas</a></li>
-      <li><a href="#">Regalos</a></li>
-    </ul>
-  </nav>
 </header>
 
 <!-- CARRITO LATERAL -->
