Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -199,3 +199,7 @@
 </html>
 
 <div class="banner-envio">Envío gratis por compras mayores a S/.199 (Lima Metropolitana)</div>
+
+<nav class="breadcrumb">
+  <a href="#">Inicio</a> › <a href="#">Maquillaje</a> › <span>Labial Rosa</span>
+</nav>
